@@ -1,4 +1,5 @@
 ﻿using System;
+using System.Linq;
 using System.Reflection;
 using LightBDD.Core.Configuration;
 using LightBDD.Core.Formatting.ExceptionFormatting;
@@ -24,20 +25,13 @@ namespace LightBDD.MsTest3
     public static class LightBddScope
     {
         /// <summary>
-        /// Initializes LightBddScope with default configuration.
+        /// Initializes LightBddScope for provided test assembly.
         /// </summary>
-        public static void Initialize()
+        /// <param name="testContext">Test context</param>
+        /// <param name="onConfigure">Optional configuration.</param>
+        public static void Initialize(TestContext testContext, Action<LightBddConfiguration> onConfigure = null)
         {
-            Initialize(Assembly.GetCallingAssembly());
-        }
-
-        /// <summary>
-        /// Initializes LightBddScope with configuration customized with <paramref name="onConfigure"/> action.
-        /// </summary>
-        /// <param name="onConfigure">Action allowing to customize LightBDD configuration.</param>
-        public static void Initialize(Action<LightBddConfiguration> onConfigure)
-        {
-            Initialize(Assembly.GetCallingAssembly(), onConfigure);
+            Initialize(GetTypeAssembly(testContext), onConfigure);
         }
 
         /// <summary>
@@ -48,6 +42,13 @@ namespace LightBDD.MsTest3
         public static void Initialize(Assembly testAssembly, Action<LightBddConfiguration> onConfigure = null)
         {
             MsTest3FeatureCoordinator.InstallSelf(Configure(onConfigure), testAssembly);
+        }
+
+        private static Assembly GetTypeAssembly(TestContext testContext)
+        {
+            return AppDomain.CurrentDomain.GetAssemblies()
+                       .FirstOrDefault(assembly => assembly.GetType(testContext.FullyQualifiedTestClassName, false, true) != null)
+                   ?? throw new InvalidOperationException($"Unable to identify assembly for type: {testContext.FullyQualifiedTestClassName}");
         }
 
         /// <summary>
